--- a/regexForPassword.html
+++ b/regexForPassword.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>REGEX FOR PASSWORD</title>
-</head>
-<body>
-    PASSWORD : <input type="text" id="ip1"><br>
-    <button>ENTER</button>
+  </head>
+  <body>
+    PASSWORD : <input type="text" id="ip1" /><br /><br />
+    <button onclick="checkPassword()">ENTER</button><br><br>
+    <span id="sp1"></span>
 
     <script>
-
+      function checkPassword() {
+        password = document.getElementById("ip1").value;
+        checkpass = /^(?=.*[a-z])(?=.*[A-Z])(?=.*[\W_]).{8,15}$/
+        if(checkpass.test(password)){
+          document.getElementById("sp1").innerHTML="Valid";
+        }else{
+          document.getElementById("sp1").innerHTML="Enter valid password";
+        }
+      }
     </script>
-</body>
+  </body>
 </html>
