--- a/regexForPassword.html
+++ b/regexForPassword.html
@@ -7,17 +7,17 @@
   </head>
   <body>
     PASSWORD : <input type="text" id="ip1" /><br /><br />
-    <button onclick="checkPassword()">ENTER</button><br><br>
+    <button onclick="checkPassword()">ENTER</button><br /><br />
     <span id="sp1"></span>
 
     <script>
       function checkPassword() {
         password = document.getElementById("ip1").value;
-        checkpass = /^(?=.*[a-z])(?=.*[A-Z])(?=.*[\W_]).{8,15}$/
-        if(checkpass.test(password)){
-          document.getElementById("sp1").innerHTML="Valid";
-        }else{
-          document.getElementById("sp1").innerHTML="Enter valid password";
+        checkpass = /^(?=.*[a-z])(?=.*[A-Z])(?=.*[\W_]).{8,15}$/;
+        if (checkpass.test(password)) {
+          document.getElementById("sp1").innerHTML = "Valid";
+        } else {
+          document.getElementById("sp1").innerHTML = "Enter valid password";
         }
       }
     </script>
